third_party/move/tools/move-package-manifest/tests/build-options/invalid_langauge_version_2.exp
error: failed to parse manifest
  |
1 | [package]
2 | name = "some_package_name"
3 | version = "0.1.2"
4 |
5 | [build]
6 | language_version = ""
  |                    ^^ Invalid version -- a version in the format 'x.y.z' (e.g. '1.2.3')
  |
